--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="90dp"
     android:orientation="horizontal"
     android:padding="3dp"
     android:background="#dddddd"
@@ -9,41 +9,52 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="7"
+        android:layout_weight="10"
         android:orientation="vertical"
-        android:weightSum="5">
+        android:weightSum="8">
 
         <TextView
             android:id="@+id/text_name"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3"
+            android:layout_weight="2"
             android:text="NAME"
-            android:textSize="18sp"
             android:textStyle="bold"
             android:gravity="center_vertical"
             android:background="#ffffff"
-            android:padding="3dp"/>
+          />
 
         <TextView
-            android:id="@+id/text_nation"
+            android:id="@+id/text_price"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            android:text="NATION"
+            android:text="PRICE"
             android:gravity="center_vertical"
-            android:layout_marginTop="2dp"
             android:background="#ffffff"
-            android:padding="3dp"/>
+           />
+
+        <TextView
+            android:id="@+id/text_latitude"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:text="LONGITUDE"
+            android:gravity="center_vertical"
+            android:background="#ffffff"
+            />
+
+        <TextView
+            android:id="@+id/text_longitude"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:text="LATITUDE"
+            android:gravity="center_vertical"
+            android:background="#ffffff"
+            />
+
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/img_flag"
-        android:layout_width="0dp"
-        android:layout_height="64dp"
-        android:layout_weight="3"
-        android:src="@drawable/korea"
-        android:background="#ffffff"
-        android:layout_marginLeft="3dp"/>
 
 </LinearLayout>
