--- a/app/src/main/res/layout/activity_memo.xml
+++ b/app/src/main/res/layout/activity_memo.xml
@@ -1,46 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp">
-    <LinearLayout
-        android:id="@+id/btn_layout"
+    android:background="#ffffffff"
+    tools:context="org.androidtown.memo_sample.MemoActivity">
+
+    <RelativeLayout
+        android:id="@+id/titleLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:orientation="horizontal">
+        android:layout_alignParentTop="true"
+        android:background="#ffffffff"
+        >
         <Button
-            android:id="@+id/load_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="불러오기"
-            android:onClick="onClick"/>
-        <Button
-            android:id="@+id/save_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="저장"
-            android:onClick="onClick"/>
-        <Button
-            android:id="@+id/delete_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="삭제"
-            android:onClick="onClick"/>
-    </LinearLayout>
-    <EditText
-        android:id="@+id/memo_edit"
-        android:layout_width="wrap_content"
+            android:id="@+id/titleBackgroundBtn"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_alignParentTop="true"
+            android:text="멀티 메모"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            />
+    </RelativeLayout>
+    <ListView
+        android:id="@+id/memoList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="4dp"
+        android:layout_below="@+id/titleLayout"
+        android:layout_above="@+id/buttonLayout"
+        android:divider="#00000000"
+        android:listSelector="#00000000"
+        android:cacheColorHint="#00000000"
+        />
+    <LinearLayout
+        android:id="@+id/buttonLayout"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/btn_layout"
-        android:hint="메모할 내용을 입력하세요."
-        android:gravity="top"
-        android:background="@android:drawable/edit_text"/>
-
+        >
+        <LinearLayout
+            android:id="@+id/buttonLayouts"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            >
+            <Button
+                android:id="@+id/newMemoBtn"
+                android:layout_width="100dp"
+                android:layout_height="48dp"
+                android:text="새 메모"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:textColor="#ff420000"
+                />
+            <Button
+                android:id="@+id/closeBtn"
+                android:layout_width="100dp"
+                android:layout_height="48dp"
+                android:layout_marginLeft="20dp"
+                android:text="닫기"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:textColor="#ff420000"
+                />
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
