--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,7 +6,7 @@
             <item
                 android:id="@+id/nav_memo"
                 android:icon="@drawable/memo"
-                android:title="SHOPPING PLAN" />
+                android:title="MEMOo" />
             <item
                 android:id="@+id/nav_list"
                 android:icon="@drawable/cart"
